@@ -1,3 +1,9 @@
+2005-09-15  Chong Yidong  <cyd@stupidchicken.com>
+
+	* image.el (image-load-path): New variable.
+	(image-search-load-path): New function.
+	(find-image): Search for images in `image-load-path'.
+
 2005-09-15  David Ponce  <david@dponce.com>
 
 	* recentf.el (recentf-save-file-modes): New option.
